<resources>
    <string name="app_name">"Angularowo"</string>
    <string name="notification_channel_name">"Domyślne powiadomienia"</string>
    <string name="notification_channel_description">"Powiadomienia w aplikacji dla których włączony jest dźwięk oraz wibracje"</string>
    <string name="notification_channel_name_silent">"Ciche powiadomienia"</string>
    <string name="notification_channel_description_silent">"Powiadomienia w aplikacji dla których wyłączony jest dźwięk oraz wibracje"</string>
    <string name="pref_key_uuid" translatable="false">"uuid"</string>
    <string name="pref_key_nickname" translatable="false">"nickname"</string>
    <string name="settings_category_notifications">"Powiadomienia"</string>
    <string name="settings_category_others">"Inne"</string>
    <string name="settings_title_subscribed_to_new_reports">"Nowe zgłoszenia"</string>
    <string name="settings_summary_subscribed_to_new_reports">"Otrzymuj powiadomienia o nowych zgłoszeniach na serwerze"</string>
    <string name="settings_title_subscribed_to_events">"Eventy"</string>
    <string name="settings_summary_subscribed_to_events">"Otrzymuj powiadomienia o zbliżających się eventach"</string>
    <string name="settings_title_subscribed_to_private_messages">"Prywatne wiadomości"</string>
    <string name="settings_summary_subscribed_to_private_messages">"Otrzymuj powiadomienia o nowych wiadomościach mail na serwerze"</string>
    <string name="settings_title_subscribed_to_account_incidents">"Zdarzenia na koncie"</string>
    <string name="settings_summary_subscribed_to_account_incidents">"Otrzymuj powiadomienia o zdarzeniach takich jak nowe ostrzeżenie lub blokada konta"</string>
    <string name="settings_title_logout">"Wyloguj się"</string>
    <string name="settings_summary_logout">"Wyloguj się z aplikacji"</string>
    <string name="settings_title_enable_notifications">"Włącz powiadomienia"</string>
    <string name="settings_summary_enable_notifications">"Wcześniej nie wyraziłeś zgody na powiadomienia. Kliknij, aby zmienić to ustawienie."</string>
    <string name="notifications_permission_denied_permanently_dialog_title">"Odrzucono zgodę na powiadomienia"</string>
    <string name="notifications_permission_denied_permanently_dialog_message">"Aby otrzymywać powiadomienia, włącz uprawnienia do powiadomień w ustawieniach urządzenia."</string>
    <string name="notifications_permission_denied_permanently_dialog_open_settings_button">"Otwórz ustawienia"</string>
    <string name="logout_question">"Wylogowywanie"</string>
    <string name="logout_question_description">"Czy na pewno chcesz się wylogować?"</string>
    <string name="login_header">"Witaj!"</string>
    <string name="login_description">"Aby korzystać z aplikacji, musisz powiązać ją ze swoim kontem w grze.
Poniżej wpisz swój kod dostępu.
Kod dostępu uzyskasz wpisując komendę /android w grze."</string>
    <string name="login_error_code_not_found">"Podany kod jest nieprawidłowy."</string>
    <string name="login_error_code_expired">"Podany kod jest prawidłowy, jednak skończyła się jego ważność. Wpisz komendę /android ponownie."</string>
    <string name="login_error_unknown">"Wystąpił nieznany błąd. Spróbuj ponownie później."</string>
    <string name="login_in_progress">"Logowanie…"</string>
    <string name="main_screen">"Strona główna"</string>
    <string name="player_list">"Lista graczy online"</string>
    <string name="chat">"Podgląd chatu"</string>
    <string name="last_punishments">"Ostatnie kary"</string>
    <string name="free_ranks">"Odbierz darmowe nagrody"</string>
    <string name="reports_history">"Historia zgłoszeń"</string>
    <string name="settings">"Ustawienia"</string>
    <string name="main_screen_greeting">"Witaj, %1$s!"</string>
    <string name="player_details_balance_title">"Stan konta:"</string>
    <string name="main_screen_tokens_title">"Twoje tokeny:"</string>
    <string name="player_details_playtime_title">"Spędzony czas online:"</string>
    <string name="main_screen_last_player_bans">"Twoje aktywne kary:"</string>
    <string name="actionbar_title_player_list">"Lista graczy online"</string>
    <string name="error_no_players">"Aktualnie nie ma nikogo na serwerze."</string>
    <string name="player_details_mark_as_favorite">"Dodaj do ulubionych"</string>
    <string name="player_details_unmark_as_favorite">"Usuń z ulubionych"</string>
    <string name="player_info">"Informacje o graczu"</string>
    <string name="player_details_tokens_title">"Tokeny gracza:"</string>
    <string name="player_details_marked_as_favorite">"Gracz został dodany do ulubionych."</string>
    <string name="player_details_unmarked_as_favorite">"Gracz został usunięty z ulubionych."</string>
    <string name="player_details_showcase_favorite_title">"Dodaj do ulubionych"</string>
    <string name="player_details_showcase_favorite_description">"Jeśli chcesz dodać gracza do ulubionych, kliknij ikonę serca.
Ulubieni gracze będą zawsze wyświetlani na początku listy!"</string>
    <string name="player_details_mute_player">"Wycisz"</string>
    <string name="player_details_kick_player">"Wyrzuć z gry"</string>
    <string name="player_details_warn_player">"Nałóż ostrzeżenie"</string>
    <string name="player_details_ban_player">"Zbanuj"</string>
    <string name="player_details_mute_dialog_reason_title">"Powód wyciszenia"</string>
    <string name="player_details_mute_dialog_reason_description">"Podaj powód wyciszenia."</string>
    <string name="player_details_kick_dialog_reason_title">"Powód wyrzucenia"</string>
    <string name="player_details_kick_dialog_reason_description">"Podaj powód wyrzucenia z gry."</string>
    <string name="player_details_warn_dialog_reason_title">"Powód ostrzeżenia"</string>
    <string name="player_details_warn_dialog_reason_description">"Podaj powód nałożenia ostrzeżenia."</string>
    <string name="player_details_ban_dialog_reason_title">"Powód zbanowania"</string>
    <string name="player_details_ban_dialog_reason_description">"Podaj powód nałożenia bana."</string>
    <string name="player_details_mute_dialog_time_title">"Czas wyciszenia"</string>
    <string name="player_details_mute_dialog_time_description">"Podaj czas trwania wyciszenia."</string>
    <string name="player_details_ban_dialog_time_title">"Czas zbanowania"</string>
    <string name="player_details_ban_dialog_time_description">"Podaj czas trwania bana."</string>
    <string name="player_details_mute_dialog_confirm_title">"Potwierdź wyciszenie"</string>
    <string name="player_details_mute_dialog_confirm_description">"Czy na pewno chcesz wyciszyć tego gracza?"</string>
    <string name="player_details_kick_dialog_confirm_title">"Potwierdź wyrzucenie"</string>
    <string name="player_details_kick_dialog_confirm_description">"Czy na pewno chcesz wyrzucić tego gracza z gry?"</string>
    <string name="player_details_warn_dialog_confirm_title">"Potwierdź ostrzeżenie"</string>
    <string name="player_details_warn_dialog_confirm_description">"Czy na pewno chcesz nałożyć ostrzeżenie na tego gracza?"</string>
    <string name="player_details_ban_dialog_confirm_title">"Potwierdź bana"</string>
    <string name="player_details_ban_dialog_confirm_description">"Czy na pewno chcesz zbanować tego gracza?"</string>
    <string name="player_details_punish_dialog_success_title">"Zakończono pomyślnie"</string>
    <string name="player_details_mute_dialog_success_description">"Gracz został wyciszony."</string>
    <string name="player_details_kick_dialog_success_description">"Gracz został wyrzucony z gry."</string>
    <string name="player_details_warn_dialog_success_description">"Gracz został ostrzeżony."</string>
    <string name="player_details_ban_dialog_success_description">"Gracz został zbanowany."</string>
    <string name="actionbar_title_punishment_list">"Ostatnie kary"</string>
    <string name="punishment_info">"Informacje o banie"</string>
    <string name="punishment_reason">"Powód:"</string>
    <string name="punishment_banner">"Administrator:"</string>
    <string name="punishment_start_date">"Data nałożenia:"</string>
    <string name="punishment_end_date">"Wygasa:"</string>
    <string name="punishment_expiration_never">"nigdy"</string>
    <string name="punishment_type_ban">"Ban"</string>
    <string name="punishment_type_mute">"Wyciszenie"</string>
    <string name="punishment_type_kick">"Wyrzucenie z gry"</string>
    <string name="punishment_type_warn">"Ostrzeżenie"</string>
    <string name="punishment_ban_description_format">"Zbanowany za %1$s"</string>
    <string name="punishment_warn_description_format">"Ostrzeżony za %1$s"</string>
    <string name="punishment_mute_description_format">"Wyciszony za %1$s"</string>
    <string name="punishment_kick_description_format">"Wyrzucony za %1$s"</string>
    <string name="punishment_date_format" translatable="false">"dd.MM.yyyy HH:mm"</string>
    <string name="actionbar_title_offers">"Darmowe nagrody"</string>
    <string name="offers_no_ads_dialog_title">"Brak reklam"</string>
    <string name="offers_no_ads_dialog_description">"Nie znaleziono żadnych reklam. Spróbuj ponownie za kilka godzin."</string>
    <string name="offers_ad_offer_redeemed_dialog_title">"Punkty przyznane!"</string>
    <string name="offers_ad_offer_redeemed_dialog_description">"Punkty za obejrzenie reklamy zostały dodane do Twojego konta."</string>
    <string name="offers_offer_redeemed_dialog_title">"Nagroda przyznana!"</string>
    <string name="offers_offer_redeemed_dialog_description">"Gratulacje, odebrałeś swoją ofertę - zostanie ona aktywowana automatycznie.
Miłej gry!"</string>
    <string name="offers_ad_question_dialog_title">"Odbiór monet"</string>
    <string name="offers_offer_question_dialog_title">"Aktywacja oferty"</string>
    <string name="offers_earn_more_coins">"Zdobądź więcej monet"</string>
    <string name="offers_exchange_coins_to_prizes">"Wymień monety na nagrody"</string>
    <string name="offers_coin_limit_reached">"Nie możesz zdobyć więcej monet!"</string>
    <string name="actionbar_title_chat">"Podgląd chatu"</string>
    <string name="chat_user_message"><![CDATA[<font color=#555555>[</font><font color=%4$s>%1$s</font><font color=#555555>]</font> <font color=%4$s>%2$s</font><font color=#555555>:</font> <font color=%5$s>%3$s</font>]]></string>
    <string name="actionbar_title_report_list">"Historia zgłoszeń"</string>
    <string name="error_no_reports">"Nie zgłosiłeś jeszcze żadnego gracza."</string>
    <string name="error_no_reports_admin">"Aktualnie nie ma żadnych aktywnych zgłoszeń."</string>
    <string name="report_reason">"Powód zgłoszenia: %1$s"</string>
    <string name="report_status_true">"Stan zgłoszenia: rozpatrzone jako prawidłowe"</string>
    <string name="report_status_false">"Stan zgłoszenia: rozpatrzone jako fałszywe"</string>
    <string name="report_status_uncertain">"Stan zgłoszenia: rozpatrzone jako niepewne"</string>
    <string name="report_status_awaiting">"Stan zgłoszenia: oczekuje na sprawdzenie"</string>
    <string name="reports_own">"Twoje zgłoszenia"</string>
    <string name="reports_others">"Zgłoszenia graczy"</string>
    <string name="report_info">"Szczegóły zgłoszenia"</string>
    <string name="report_details_reason">"Powód zgłoszenia:"</string>
    <string name="report_details_reporter">"Zgłaszający:"</string>
    <string name="report_details_date">"Data zgłoszenia:"</string>
    <string name="report_date_format" translatable="false">"dd.MM.yyyy HH:mm"</string>
    <string name="player_body_image_description">"Obrazek postaci"</string>
    <string name="player_avatar_image_description">"Avatar gracza"</string>
    <string name="ban_type_image_description">"Ikona typu kary"</string>
    <string name="reward_image_description">"Ikona nagrody"</string>
    <string name="vanish_image_description">"Ikona widoczności gracza"</string>
    <string name="heart_image_description">"Ikona oznaczenia jako ulubiony"</string>
</resources>