<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainScreenFragment"
            android:title="@string/main_screen" />
        <item
            android:id="@+id/playerListFragment"
            android:title="@string/player_list" />
        <item
            android:id="@+id/chatFragment"
            android:title="@string/chat" />
        <item
            android:id="@+id/lastPunishmentsFragment"
            android:title="@string/last_punishments" />
        <item
            android:id="@+id/offersFragment"
            android:title="@string/free_ranks" />
    </group>
    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/reportListContainerFragment"
            android:title="@string/reports_history" />
        <item
            android:id="@+id/settingsActivity"
            android:title="@string/settings"
            android:checkable="false" />
    </group>
</menu>