<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="pl.piotrskiba.angularowo.R" />

        <variable
            name="viewModel"
            type="pl.piotrskiba.angularowo.main.report.details.viewmodel.ReportDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/report_banner"
            layout="@layout/report_list_item"
            app:report="@{viewModel.reportBanner}" />

        <TextView
            android:id="@+id/tv_reported"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:gravity="center_horizontal"
            android:text="@{viewModel.reportDetails.reportedName}"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintTop_toBottomOf="@+id/report_banner"
            tools:text="Username" />

        <TextView
            android:id="@+id/tv_reason_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:gravity="center_horizontal"
            android:text="@string/report_details_reason"
            android:textAlignment="center"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_reported" />

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@{viewModel.reportDetails.reason}"
            android:textAlignment="center"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_reason_title"
            tools:text="Reason" />

        <TextView
            android:id="@+id/tv_reporter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:gravity="center_horizontal"
            android:text="@string/report_details_reporter"
            android:textAlignment="center"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_reason" />

        <TextView
            android:id="@+id/tv_reporter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/padding_default"
            android:paddingEnd="@dimen/padding_default"
            android:text="@{viewModel.reportDetails.reporterName}"
            android:textAlignment="center"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_reporter_title"
            tools:text="Reporter" />

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:gravity="center_horizontal"
            android:text="@string/report_details_date"
            android:textAlignment="center"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_reporter" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/padding_default"
            android:paddingEnd="@dimen/padding_default"
            android:text="@{viewModel.reportDetails.date(context)}"
            android:textAlignment="center"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_title"
            tools:text="01.01.2022 01:00" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
